# Mohavim

./: CODIGO_FONTE.md  CONFIG_EXAMPLE.md  I18N_IMPLEMENTATION.md  LICENSE  PKGBUILD  README.md  REMOCAO_MARCADOR_DIFF.md  THEMES_IMPLEMENTATION.md  app.js  index.html  install.sh  mohavim.c  replit.md  server.js  style.css  themes.json
MohavimEditor/: .replit  Makefile  Makefile.am  config.h  configure.ac  mohavim  mohavim.c  mohavim_fixed  mohavim_test  replit.md  teste_debug
MohavimEditor/src/: mohavim.c
codigo_fonte/: Makefile.am  revision.h
plugins/: Makefile  quick_terminal.c
src/: Makefile  editor  editor.c  editor.h  editor_backup.c  editor_fix.txt  files.c  files.c.backup  files.h  i18n.c  i18n.h  i18n_plugin_translations.txt  log.c  log.h  main.c  main.c.bak  main_fix.txt  mohavim  plugin_manager.c  plugin_manager.h  test  theme.c  theme.h  ui.c  ui.h
